refactor(home): 移除首页数据接口并优化桌面侧边栏
- 移除废弃的 SimpleBookVO 和 HomeData 接口定义
- 删除 getHomeData、getHomeTopRated、getHomeNewBooks 和 getHomePopular 函数
- 添加桌面侧边栏自适应收缩功能，屏幕宽度小于1024px时自动收缩为图标模式
- 实现侧边栏主题切换按钮，支持日间/夜间模式切换
- 优化侧边栏导航项在收缩状态下的显示效果
- 更新管理员页面的水平内边距适配不同屏幕尺寸
- 优化书籍详情页AI摘要缓存策略，移除大数据量的速读数据缓存
- 添加圆桌讨论会话解读报告生成功能
- 扩展通知类型支持圆桌讨论报告，添加触发用户ID可空选项
- 增强EPUB阅读器图片点击处理逻辑，支持多种图片元素类型
- 改进Markdown渲染器组件，添加可点击放大的图片功能和增强样式
- 在书籍详情页添加封面更新后的缓存清除逻辑